# FL-training

./: README.md  pyproject.toml
fl/: __init__.py  client_app.py  server_app.py  utils.py
fl_training/: client_app.py  server_app.py  task.py
