[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "torchinfo>=1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ornob"

[tool.flwr.app.components]
serverapp = "fl.server_app:app"
clientapp = "fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 6
fraction-fit = 0.5
local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
